# Homework

./: .gitignore  README.md  pyproject.toml  solution.ipynb
scripts/: generate_submission_ensemble.py  train_submit.py
