[project]
name = "cv-hw-2026"
version = "0.1.0"
description = "Kaggle 2026-cv-competition — детекция 52 классов"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "opencv-python-headless>=4.9.0,<4.10",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "torchvision>=0.17.0",
    "kagglehub>=0.2.0",
]

[tool.uv]
package = false
